objects/Lease_Schedule_Summary__c.object
<CustomObject>
    <fields>
        <fullName>ACH_Yes_No__c</fullName>
        <formula>IF( Lease_Payment__r.ACH__c = TRUE , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACH Yes/No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Bank_Account_Number__c</fullName>
        <description>This is a placeholder field for the Booking Template Report. Data for this field will be populated outside of SFDC</description>
        <label>Applicant Bank Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_Bank_Routing_Number__c</fullName>
        <description>This is a placeholder field for the Booking Template Report. Data for this field will be populated outside of SFDC</description>
        <label>Applicant Bank Routing Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Tax_Depreciation_Basis_in__c</fullName>
        <description>Total cost less the projected ITC/cash grant amount.
For AU its the System Price passed from GPP</description>
        <formula>IF(Country_Domain__c  =  &apos;au&apos;, Quote__r.System_Price_Excluding_Tax__c, 
IF(  Lease_Payment__r.PIS_Entry_Date__c  &gt;  DATE(2015,7,17),Lease_Payment__r.Lease_Cost__c ,(Lease_Payment__r.Lease_Cost__c  -  Lease_Payment__r.ITC_Cash_Grant_Valuation_acctg__c)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total cost less the projected ITC/cash grant amount. For AU its the System Price passed from GPP</inlineHelpText>
        <label>Book/Tax Depreciation Basis in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <formula>Lease_Payment__r.Booked_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSI_Rebate__c</fullName>
        <formula>IF(Country_Domain__c &lt;&gt; &apos;au&apos;,Quote__r.Solar_Rebate_Amount__c,0)</formula>
        <label>CSI Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Operation_and_Maintenance_Fee__c</fullName>
        <description>Monthly O&amp;M Fee</description>
        <formula>IF(Country_Domain__c &lt;&gt; &apos;au&apos;,System_Size__c * 0.4 / 240,0)</formula>
        <inlineHelpText>Monthly O&amp;M Fee</inlineHelpText>
        <label>Calculated Operation and Maintenance Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capital_Lease_Min_Lease_Payment_Total__c</fullName>
        <formula>Total_Lease_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capital Lease: Min Lease Payment Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capital_Lease_Net_Investment__c</fullName>
        <description>This is revenue added to PV residual if the lease type is capital.  If this is an operating lease, then no value is shown.</description>
        <formula>IF (
AND (
Capital_Lease_Revenue__c &lt;&gt; &quot;N/A&quot; ,
Capital_Lease_PV_of_Residual__c &lt;&gt; &quot;N/A&quot; 
) , If(RIGHT(Quote__r.Opportunity.Owner.CountryDomainText__c, 2) &lt;&gt;&apos;au&apos;,
&quot;$&quot;,&quot;&quot;) &amp; TEXT ( ROUND ( NPV_of_MLP__c + NPV_of_UGRV__c , 2 ) ) ,
&quot;N/A&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is revenue added to PV residual if the lease type is capital.  If this is an operating lease, then no value is shown.</inlineHelpText>
        <label>Capital Lease: Net Investment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital_Lease_PV_of_Residual__c</fullName>
        <description>Displays the NPV of UGRV if this is a capital lease.</description>
        <formula>IF(Country_Domain__c&lt;&gt; &apos;au&apos;,IF (
Lease_Classification__c = &quot;Capital Lease&quot; ,
&quot;$&quot; &amp; TEXT ( ROUND ( NPV_of_UGRV__c , 2 ) ) ,
&quot;N/A&quot;
),TEXT(0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the NPV of UGRV if this is a capital lease.</inlineHelpText>
        <label>Capital Lease: PV of Residual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital_Lease_Revenue__c</fullName>
        <description>Displays the NPV of MLP if this is a capital lease; otherwise, no value is shown.</description>
        <formula>IF (
Lease_Classification__c = &quot;Capital Lease&quot; , If(RIGHT(Quote__r.Opportunity.Owner.CountryDomainText__c, 2) &lt;&gt;&apos;au&apos;,
&quot;$&quot;,&quot;&quot;) &amp; TEXT ( ROUND ( NPV_of_MLP__c , 2 ) ) ,
&quot;N/A&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the NPV of MLP if this is a capital lease; otherwise, no value is shown.</inlineHelpText>
        <label>Capital Lease: Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capital_Lease_Yield__c</fullName>
        <description>Displays the Implicit Rate from the testing template if this is a capital lease.</description>
        <formula>IF (
Lease_Classification__c = &quot;Capital Lease&quot; ,
TEXT ( 
ROUND ( Implicit_Rate__c * 100 , 2 )  
) &amp; &quot;%&quot; ,
&quot;N/A&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Implicit Rate from the testing template if this is a capital lease.</inlineHelpText>
        <label>Capital Lease: Yield</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capitalized_Cost_on_Operating_Leases__c</fullName>
        <description>If this is a capital lease, then the cost is the system size multiplied by $0.28; otherwise, if this is an operating lease, then the cost is the system size multiplied by $0.24.</description>
        <formula>If(Country_Domain__c =&apos;au&apos;,&quot;0&quot;, 
&quot;$&quot; &amp;
		IF(Lease_Payment__r.PIS_Entry_Date__c &gt; DATE (2014,06,30), 
		IF(Lease_Classification__c = &quot;Capital Lease&quot; ,TEXT(ROUND(System_Size__c* Cost_Factor_Capital__c,2)),TEXT(ROUND(System_Size__c*  Cost_Factor_Operating__c ,2))), 	
		IF(Lease_Classification__c = &quot;Capital Lease&quot; ,TEXT(ROUND(System_Size__c*0.28,2)),TEXT(ROUND(System_Size__c* 0.24,2))		
		)	
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this is a capital lease, then the cost is the system size multiplied by $0.28; if  operating lease, then  multiplied by $0.24.All with PIS since 10/1/2013 removed VPR of 0.03 cents. All with PIS since 7/1/2014 reduce DPF 0.02.</inlineHelpText>
        <label>Capitalized Cost on Operating Leases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Factor_Capital__c</fullName>
        <description>Multiplier if Lease Classification is Capital Lease. Factor to calculate Capitalized Cost on Operating Leases. Values driven when Lease Sched Summary gets updated trigger field update based on PIS entry date value</description>
        <label>Cost Factor_Capital</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Factor_Operating__c</fullName>
        <description>Multiplier if Lease Classification is Operating Lease. Factor to calculate Capitalized Cost on Operating Leases.  Values driven when Lease Sched Summary gets updated trigger field update based on PIS entry date value</description>
        <label>Cost Factor_Operating</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Domain__c</fullName>
        <formula>RIGHT(Quote__r.Opportunity.Owner.CountryDomainText__c, 2)</formula>
        <label>Country Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <description>This is a placeholder field for the Booking Template Report. Data for this field will be populated outside of SFDC</description>
        <label>Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Prepayment__c</fullName>
        <formula>Quote__r.Full_PrePayment_Amount_Base_Amount__c</formula>
        <label>Customer Prepayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Countersigned__c</fullName>
        <description>Date of which this lease is entered into</description>
        <formula>Lease_Payment__r.Date_Countersigned__c</formula>
        <inlineHelpText>Date of which this lease is entered into</inlineHelpText>
        <label>Date Countersigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Last_Calculations_Attempt__c</fullName>
        <label>Date Of Last Calculations Attempt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FMV__c</fullName>
        <formula>Lease_Payment__r.Fair_Market_Value_acctg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fed_ID_SSN__c</fullName>
        <description>This is a placeholder field for the Booking Template Report. Data for this field will be populated outside of SFDC</description>
        <label>Fed ID/SSN</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Type__c</fullName>
        <label>Finance Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financier__c</fullName>
        <description>This is the financier for this lease and used in the Lease Test calculations.</description>
        <formula>TEXT( Lease_Payment__r.Funding_Tranche__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Term_in_Months__c</fullName>
        <defaultValue>240</defaultValue>
        <description>Default value for Booking Template. Will need to change if leases vary from current standard of 240 months.</description>
        <label>Financing Term in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <defaultValue>&quot;Lease&quot;</defaultValue>
        <description>Default Value for booking Template. Only Financing Type = Lease are inserted into booking template.</description>
        <label>Financing Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Prepaid_Lease__c</fullName>
        <description>Lease Type</description>
        <formula>IF (
 Quote__r.Full_Prepaid_Lease__c  = TRUE ,
&quot;Prepaid&quot; ,
&quot;Monthly&quot;
)</formula>
        <inlineHelpText>Lease Type</inlineHelpText>
        <label>Full Prepaid Lease</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Method_Basis__c</fullName>
        <label>Grant Method Basis</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Cash_Payments_Year_1_Month_1__c</fullName>
        <description>First Monthly Payment</description>
        <formula>IF( ( Lease_Type__c == &quot;Monthly&quot; ), (
if(Country_Domain__c &lt;&gt;&apos;au&apos;,
Quote__r.RoundOff_First_Monthly_Payment_Base_Amo__c - Calculated_Operation_and_Maintenance_Fee__c ,
Quote__r.Monthly_Base_Plus_Tax_Year_1__c - 7.50 - Calculated_Operation_and_Maintenance_Fee__c))
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First Monthly Payment</inlineHelpText>
        <label>Gross Cash Payments (Year 1 Month 1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Cash_Payments_prepay__c</fullName>
        <formula>Customer_Prepayment__c + CSI_Rebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Cash Payments (prepay)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_MLP_13_20__c</fullName>
        <formula>Yr_13_Annual_Lease_Payment__c  +  Yr_14_Annual_Lease_Payment__c  +  Yr_15_Annual_Lease_Payment__c  +  Yr_16_Annual_Lease_Payment__c  +  Yr_17_Annual_Lease_Payment__c  +  Yr_18_Annual_Lease_Payment__c  +  Yr_19_Annual_Lease_Payment__c  +  Yr_20_Annual_Lease_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross MLP 13-20</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_MLP_1_12__c</fullName>
        <formula>IF (
Lease_Type__c = &quot;Prepaid&quot; ,
Gross_Cash_Payments_prepay__c ,
Yr_01_Annual_Lease_Payment__c  +  Yr_02_Annual_Lease_Payment__c  +  Yr_03_Annual_Lease_Payment__c  +  Yr_04_Annual_Lease_Payment__c  +  Yr_05_Annual_Lease_Payment__c  +  Yr_06_Annual_Lease_Payment__c  +  Yr_07_Annual_Lease_Payment__c  +  Yr_08_Annual_Lease_Payment__c  +  Yr_09_Annual_Lease_Payment__c  +  Yr_10_Annual_Lease_Payment__c  +  Yr_11_Annual_Lease_Payment__c  +  Yr_12_Annual_Lease_Payment__c +  CSI_Rebate__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross MLP 1-12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_MLP_21_25__c</fullName>
        <formula>Yr_21_Annual_Lease_Payment__c + Yr_22_Annual_Lease_Payment__c + Yr_23_Annual_Lease_Payment__c + Yr_24_Annual_Lease_Payment__c + Yr_25_Annual_Lease_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross MLP 21-25</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ITC__c</fullName>
        <formula>Lease_Payment__r.ITC_Cash_Grant_Valuation_acctg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Implicit_Rate__c</fullName>
        <description>This field is populated by code that calculates the Implicit Rate based on the FMV and monthly lease payments</description>
        <label>Implicit Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Joint_Applicant_Middle_Name__c</fullName>
        <label>Joint Applicant Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Calculations_Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This controls the batch job processing the calculations.  If this is false, the summary record will be calculated in the timed batch job.</description>
        <inlineHelpText>This controls the batch job processing the calculations.  If this is false, the summary record will be calculated in the timed batch job.</inlineHelpText>
        <label>Lease Calculations Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Classification__c</fullName>
        <description>Displays whether the lease is a capital lease or operating lease.</description>
        <formula>IF(RIGHT(Quote__r.Opportunity.Owner.CountryDomainText__c, 2) &lt;&gt;&apos;au&apos;, IF (
X90_Test__c &gt; 0.90 ,
&quot;Capital Lease&quot; ,
  IF(X90_Test__c = 0, &quot;&quot;,
&quot;Operating Lease&quot;)
), &apos;Capital Lease&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays whether the lease is a capital lease or operating lease.</inlineHelpText>
        <label>Lease Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_FMV__c</fullName>
        <formula>FMV__c - ITC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lease FMV for 90% test (cost-ITC)</inlineHelpText>
        <label>Lease FMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Number__c</fullName>
        <description>This is the lease number for this particular summary record</description>
        <formula>Quote__r.Consolidated_Lease_Number__c</formula>
        <label>Lease Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Payment</label>
        <referenceTo>LeasePayment__c</referenceTo>
        <relationshipLabel>Lease Schedule Summaries</relationshipLabel>
        <relationshipName>Lease_Schedule_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease_Program__c</fullName>
        <defaultValue>2.4</defaultValue>
        <label>Lease Program</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Residual_Amount__c</fullName>
        <formula>IF(RIGHT(Quote__r.Opportunity.Owner.CountryDomainText__c, 2) &lt;&gt;&apos;au&apos;, Lease_Payment__r.Fair_Market_Value_acctg__c * 0.10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Residual $ Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <formula>Lease_Payment__r.Lease_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leasee__c</fullName>
        <description>This is the name of the leasee based on the quote and related account</description>
        <formula>Quote__r.Account__r.Name</formula>
        <label>Leasee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Margin__c</fullName>
        <label>Material Margin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_O_M_Amortization_Amount__c</fullName>
        <description>Total operating and maintenance fee income divided by the number of periods in a lease (240).</description>
        <formula>IF(Text(Quote__r.QuoteType__c) &lt;&gt; &apos;Loan&apos;,IF( RIGHT(Quote__r.Opportunity.Owner.CountryDomainText__c, 2) &lt;&gt;&apos;au&apos;,Total_O_M_Income__c / 240, 0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total operating and maintenance fee income divided by the number of periods in a lease (240).</inlineHelpText>
        <label>Monthly O&amp;M Amortization Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NPV__c</fullName>
        <formula>NPV_of_MLP__c + NPV_of_UGRV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NPV_of_MLP__c</fullName>
        <description>Populated and calculated by code</description>
        <label>NPV of MLP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NPV_of_UGRV__c</fullName>
        <description>Populated and calculated by code</description>
        <inlineHelpText>Net present value of the unguaranteed residual value</inlineHelpText>
        <label>NPV of UGRV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PBI_or_UPFRONT__c</fullName>
        <description>This is a temporary placeholder field for the booking template report. One the formula to determine whether a lease is PBI or UPFRONT is confirmed, this will be changed to be a formula field.</description>
        <label>PBI or UPFRONT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_Residual__c</fullName>
        <description>Present value of Residual (uses Implicit Rate value, Lease Schedules and Unguaranteed Residual Value).  Populated and calculated by code.</description>
        <inlineHelpText>Present value of Residual (uses Implicit Rate value, Lease Schedules and Unguaranteed Residual Value).  Populated and calculated by code.</inlineHelpText>
        <label>PV Residual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_2_12__c</fullName>
        <formula>Y1_MLP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount 2 - 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Yr_1_Month_1__c</fullName>
        <description>This field holds the first monthly payment and any prepayment amount.</description>
        <formula>Y1_MLP__c  +  Quote__r.Partial_Prepayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field holds the first monthly payment and any prepayment amount.</inlineHelpText>
        <label>Payment Amount Yr 1 Month 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Placed_in_Service__c</fullName>
        <description>In Service Date</description>
        <formula>Lease_Payment__r.Placed_In_Service__c</formula>
        <inlineHelpText>In Service Date</inlineHelpText>
        <label>Placed in Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_Middle_Name__c</fullName>
        <label>Primary Applicant Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principle_Payment__c</fullName>
        <description>Customer Prepayment plus CSI Rebate for the first payment in the first month and year.</description>
        <formula>CSI_Rebate__c + Customer_Prepayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer Prepayment plus CSI Rebate for the first payment in the first month and year.</inlineHelpText>
        <label>Principle Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Cash_Grant_in__c</fullName>
        <label>Projected Cash Grant in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Classification__c</fullName>
        <defaultValue>&quot;Residential&quot;</defaultValue>
        <description>Default value for the booking template - all leases are currently residential.</description>
        <label>Property Classification</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Lease Schedule Summaries</relationshipLabel>
        <relationshipName>Lease_Schedule_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <description>The maximum rated capacity in watts, taken from the quote</description>
        <formula>Quote__r.Maximum_Rated_Capacity_Watts__c</formula>
        <inlineHelpText>Maximum Rated Capacity (Watts)</inlineHelpText>
        <label>System Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lease_Payments__c</fullName>
        <formula>Gross_MLP_1_12__c  +  Gross_MLP_13_20__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Lease Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_O_M_Income__c</fullName>
        <description>$0.40 multiplied by the system size.</description>
        <formula>0.40 *  System_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>$0.40 multiplied by the system size.</inlineHelpText>
        <label>Total O&amp;M Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPFRONT_or_PBI__c</fullName>
        <formula>IF(Country_Domain__c = &apos;au&apos;,&apos; &apos;,


IF(Lease_Payment__r.Site_State_Prov__c!=null &amp;&amp; CONTAINS($Setup.Multi_State_Settings__c.PBI_States__c,Lease_Payment__r.Site_State_Prov__c),&apos;PBI&apos;,&apos;UPFRONT&apos;)


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPFRONT or PBI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unguaranteed_Residual__c</fullName>
        <formula>FMV__c *0.10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unguaranteed Residual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WW__c</fullName>
        <label>WW</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X90_Test__c</fullName>
        <description>This field displays the ratio of the Lease FMV to the NPV</description>
        <formula>NPV_of_MLP__c/Lease_FMV__c</formula>
        <label>90% Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Y10_MLP__c</fullName>
        <description>This takes the total yearly payment summed up from the lease schedules that are calculated via code and then subtracts the monthly O&amp;M fee to show the ACH payment per month, which is used to calculate the IRR.</description>
        <inlineHelpText>This takes the total yearly payment summed up from the lease schedules that are calculated via code and then subtracts the monthly O&amp;M fee to show the ACH payment per month, which is used to calculate the IRR.</inlineHelpText>
        <label>Y10 MLP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y11_MLP__c</fullName>
        <description>This takes the total yearly payment summed up from the lease schedules that are calculated via code and then subtracts the monthly O&amp;M fee to show the ACH payment per month, which is used to calculate the IRR.</description>
        <inlineHelpText>This takes the total yearly payment summed up from the lease schedules that are calculated via code and then subtracts the monthly O&amp;M fee to show the ACH payment per month, which is used to calculate the IRR.</inlineHelpText>
        <label>Y11 MLP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y12_MLP__c</fullName>
        <description>This takes the total yearly payment summed up from the lease schedules that are calculated via code and then subtracts the monthly O&amp;M fee to show the ACH payment per month, which is used to calculate the IRR.</description>
        <inlineHelpText>This takes the total yearly payment summed up from the lease schedules that are calculated via code and then subtracts the monthly O&amp;M fee to show the ACH payment per month, which is used to calculate the IRR.</inlineHelpText>
        <label>Y12 MLP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_01_Guaranteed_Output_High_Value__c</fullName>
        <description>Displays the high value guaranteed output information from the corresponding Guaranteed Output field with both values. Note that the originating Guaranteed Output values need to be properly formatted in order for this display correctly.</description>
        <formula>RIGHT (
Year_01_Guaranteed_Output__c ,
LEN ( Year_01_Guaranteed_Output__c ) - FIND ( &quot;-&quot; , Year_01_Guaranteed_Output__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the high value guaranteed output information from the corresponding Guaranteed Output field with both values. Note that the originating Guaranteed Output values need to be properly formatted in order for this display correctly.</inlineHelpText>
        <label>Year 01 Guaranteed Output - High Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_01_Guaranteed_Output_Low_Value__c</fullName>
        <description>Displays the low value guaranteed output information from the corresponding Guaranteed Output field with both values.  Note that the originating Guaranteed Output values need to be properly formatted in order for this display correctly.</description>
        <formula>LEFT ( 
Year_01_Guaranteed_Output__c ,
FIND ( &quot;-&quot; , Year_01_Guaranteed_Output__c ) - 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the low value guaranteed output information from the corresponding Guaranteed Output field with both values.  Note that the originating Guaranteed Output values need to be properly formatted in order for this display correctly.</inlineHelpText>
        <label>Year 01 Guaranteed Output - Low Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_01_Guaranteed_Output__c</fullName>
        <description>Used to display guaranteed values from the lease schedule onto the lease schedule summary object for Booking Template reporting purposes.  Please do not modify without consulting a Sys Admin.</description>
        <label>Year 01 Guaranteed Output</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_02_Guaranteed_Output_High_Value__c</fullName>
        <description>Displays the high value guaranteed output information from the corresponding Guaranteed Output field with both values. Note that the originating Guaranteed Output values need to be properly formatted in order for this display correctly.</description>
        <formula>RIGHT (
Year_02_Guaranteed_Output__c ,
LEN ( Year_02_Guaranteed_Output__c ) - FIND ( &quot;-&quot; , Year_02_Guaranteed_Output__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the high value guaranteed output information from the corresponding Guaranteed Output field with both values. Note that the originating Guaranteed Output values need to be properly formatted in order for this display correctly.</inlineHelpText>
        <label>Year 02 Guaranteed Output - High Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_02_Guaranteed_Output_Low_Value__c</fullName>
        <description>Displays the low value guaranteed output information from the corresponding Guaranteed Output field with both values.  Note that the originating Guaranteed Output values need to be properly formatted in order for this display correctly.</description>
        <formula>LEFT ( 
Year_02_Guaranteed_Output__c ,
FIND ( &quot;-&quot; , Year_02_Guaranteed_Output__c ) - 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the low value guaranteed output information from the corresponding Guaranteed Output field with both values.  Note that the originating Guaranteed Output values need to be properly formatted in order for this display correctly.</inlineHelpText>
        <label>Year 02 Guaranteed Output - Low Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_02_Guaranteed_Output__c</fullName>
        <description>Used to display guaranteed values from the lease schedule onto the lease schedule summary object for Booking Template reporting purposes.  Please do not modify without consulting a Sys Admin.</description>
        <label>Year 02 Guaranteed Output</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_03_Guaranteed_Output_High_Value__c</fullName>
        <description>Displays the high value guaranteed output information from the corresponding Guaranteed Output field with both values. Note that the originating Guaranteed Output values need to be properly formatted in order for this display correctly.</description>
        <formula>RIGHT (
Year_03_Guaranteed_Output__c ,
LEN ( Year_03_Guaranteed_Output__c ) - FIND ( &quot;-&quot; , Year_03_Guaranteed_Output__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the high value guaranteed output information from the corresponding Guaranteed Output field with both values. Note that the originating Guaranteed Output values need to be properly formatted in order for this display correctly.</inlineHelpText>
        <label>Year 03 Guaranteed Output - High Value</label>
        <type>Text</type>
    </fields>
</CustomObject>